# skcomm

./: .commit_msg  .env.example  .gitignore  API.md  ARCHITECTURE.md  CLAUDE.md  MISSION.md  QUICKSTART.md  README.md  SECURITY.md  SKILL.md  SUMMARY.md  package.json  pyproject.toml  skill.yaml
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  SOP-KEY-EXCHANGE.md
launchd/: com.skcapstone.skcomm-daemon.plist  com.skcapstone.skcomm.plist
openclaw-plugin/: package.json
openclaw-plugin/src/: index.ts  openclaw.plugin.json
scripts/: mcp-serve.sh
src/skcomm/: __init__.py  ack.py  api.py  capauth_validator.py  cli.py  compression.py  config.py  core.py  crypto.py  did_router.py  discovery.py  heartbeat.py  household_router.py  key_exchange.py  marketplace.py  mcp_server.py  metrics.py  models.py  outbox.py  profile_router.py  pubsub.py  pubsub_transport.py  queue.py  ratelimit.py  router.py  signaling.py  signing.py  souls_router.py  transport.py
src/skcomm/transports/: file.py  nostr.py  syncthing.py  tailscale.py  webrtc.py  websocket.py
systemd/: install.sh  skcomm-daemon.service  skcomm.service
tests/: conftest.py  test_ack.py  test_api.py  test_capauth_validator.py  test_cli.py  test_compression.py  test_config.py  test_core.py  test_crypto.py  test_discovery.py  test_file_transport.py  test_heartbeat.py  test_marketplace.py  test_metrics.py  test_models.py  test_nostr_transport.py  test_outbox.py  test_priority_queue.py  test_profile_router.py  test_queue.py  test_ratelimit.py  test_router.py  test_signaling.py  test_signing.py  test_syncthing_transport.py  test_tailscale_integration.py  test_tailscale_transport.py  test_transport.py  test_transport_nostr.py  test_webrtc_integration.py  test_webrtc_transport.py  test_websocket_transport.py
tests/integration/: test_nostr_relay.py
